# superexam

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  GEMINI.md  IMPLEMENTATION_PLAN.md  deploy.sh
backend/: .env.example
backend/server/: Cargo.toml  build.rs
backend/server/src/: db.rs  main.rs
backend/server/src/services/: ingestion.rs
docs/: deployment_guide.md  design_spec.md  project_plan.md  technical_design.md
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/proto/: exam.pbjson.dart  history.pb.dart  history.pbenum.dart  history.pbgrpc.dart  ingestion.pb.dart  ingestion.pbgrpc.dart  ingestion.pbjson.dart
frontend/lib/services/: grpc_channel.dart  ingestion_service.dart
processing-service/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt  test_api_types.py
processing-service/app/: __init__.py  config.py  main.py  models.py  worker.py
processing-service/app/middleware/: __init__.py  security.py
processing-service/app/schemas/: question_schema.json
processing-service/app/services/: __init__.py  firestore_service.py  gemini_service.py  pdf_service.py  processor.py  (+2 more)
processing-service/tests/: test_gemini_service.py
proto/: exam.proto  history.proto  ingestion.proto
scripts/: generate_protos.sh
v0/frontend/: pubspec.yaml
v0/proto/: ingestion.proto
website/: .env.example  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
website/app/: globals.css  layout.tsx  page.tsx
website/components/: app-sidebar.tsx  mode-toggle.tsx  progress-bar.tsx  refresh-button.tsx
(+62 files in other folders)
