[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
firestore = "0.47.0"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.12"

[build-dependencies]
prost-build = "0.13"
tonic = "0.12"
tonic-build = "0.12"
