[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
firestore = "0.47.0"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.12"
lopdf = "0.34.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4"] }
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.6"
rustls = { version = "0.23", features = ["ring"] }
tonic-web = "0.12"
http = "1.1"
tower-http = { version = "0.6", features = ["cors"] }

[build-dependencies]
prost-build = "0.13"
tonic = "0.12"
tonic-build = "0.12"